--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "masterarbeit",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://masterarbeit-backend:8000",
+  "proxy": "http://ma-textb-prozessanalyse-backend:8000",
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
