--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "masterarbeit",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://ma-textb-prozessanalyse-backend:8000",
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
@@ -12,7 +12,6 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-json-tree": "^0.11.2",
     "react-scripts": "3.0.1",
     "recharts": "^1.6.2"
   },
