--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:8
+# first part - create production build
+FROM node:8 as build-stage
 
 ADD yarn.lock /yarn.lock
 ADD package.json /package.json
@@ -10,8 +11,11 @@ RUN yarn
 WORKDIR /app
 ADD . /app
 
-EXPOSE 3000
-EXPOSE 35729
+RUN yarn build
 
-ENTRYPOINT ["/bin/bash", "/app/run.sh"]
-CMD ["start"]
+# second part - put production build into nginx' context and serve it
+FROM nginx:1.15.9-alpine
+COPY default.conf /etc/nginx/conf.d/default.conf
+COPY --from=build-stage /app/build /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
